# switch-model

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: MODEL.md  README.md  bench_spec.md  golden_metrics.yaml
outputs/: REPORT.md
outputs/ngspice/: REPORT.md
outputs/ngspice/bs/: NOISE_REPORT.md  PARASITICS_REPORT.md  REPORT.md  noise_spectrum.csv  ron_sweep.csv  switch_metrics.json
outputs/ngspice/bs_dummy/: REPORT.md  ron_sweep.csv  switch_metrics.json
outputs/python/: REPORT.md
outputs/spectre/: REPORT.md
scripts/: compare_engines.py  ensure_python_env.sh  install_python.sh  run_all_simulations.sh  run_compare_switches.py  run_noise.py  run_parasitics.py  run_ron.py  write_summary_report.py
src/switch_model/: __init__.py  cli_helpers.py  compare.py  config.py  io.py  metrics.py  model.py  netlist.py  ngspice_engine.py  noise.py  parasitics.py  plotting.py  report.py  ron.py  spectre_engine.py  spectre_psf.py
testbench/ngspice/: noise_sweep.cir  parasitics_bench.cir  ron_sweep.cir
testbench/spectre/: noise_sweep.scs  parasitics_bench.scs  ron_sweep.scs
tests/: __init__.py  test_compare.py  test_ngspice_engine.py  test_ngspice_noise.py  test_ngspice_parasitics.py  test_noise.py  test_parasitics.py  test_plotting.py  test_report.py  test_ron.py  test_spectre_engine.py  test_spectre_noise.py  test_spectre_parasitics.py  test_spectre_psf.py  test_spectre_psf_noise.py  test_switch_types.py  test_veriloga_modules.py
veriloga/: configurable_cmos_dummy_switch.va  configurable_pmos_dummy_switch.va  configurable_switch.va
(+217 files in other folders)
