[project]
name = "switch-model"
version = "0.1.0"
description = "Configurable MOS switch behavioral models (NMOS, PMOS, CMOS, dummy, bootstrapped) with Python and Verilog-A"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "psf-parser>=0.2.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/switch_model"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
